--- a/F and C upload.ipynb
+++ b/F and C upload.ipynb
@@ -2,44 +2,90 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "58da681e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Welcome to Fibonacci_Series\n",
-    "print(\"Welcome to Fibonacci_Series\")\n",
+    "def Fibonacci():  \n",
+    "    # Welcome to Fibonacci_Series\n",
+    "    print(\"Welcome to Fibonacci_Series\")\n",
     "\n",
-    "# Get user input for the Fibonacci series\n",
-    "user_input = int(input(\"Enter any number: \"))\n",
+    "    # Get user input for the Fibonacci series\n",
+    "    user_input = int(input(\"Enter any number: \"))\n",
     "\n",
-    "# Initialize variables for the Fibonacci series\n",
-    "n1 = 0\n",
-    "n2 = 1\n",
-    "n3 = 0\n",
+    "    # Initialize variables for the Fibonacci series\n",
+    "    n1 = 0\n",
+    "    n2 = 1\n",
+    "    n3 = 0\n",
     "\n",
-    "# Generate and print the Fibonacci series\n",
-    "for i in range(user_input):\n",
-    "    print(n3)\n",
-    "    print(\"*\" * 20)\n",
+    "    # Generate and print the Fibonacci series\n",
+    "    for i in range(user_input):\n",
+    "        print(n3)\n",
+    "        print(\"*\" * 20)\n",
     "\n",
-    "    # Update variables for the next iteration\n",
-    "    n1 = n2\n",
-    "    n2 = n3\n",
-    "    n3 = n1 + n2\n",
+    "        # Update variables for the next iteration\n",
+    "        n1 = n2\n",
+    "        n2 = n3\n",
+    "        n3 = n1 + n2\n",
+    "        \n",
+    "def Cube():\n",
+    "    # Welcome to cubes\n",
+    "    print(\"Welcome to cubes\")\n",
+    "    print(\"*\" * 17)\n",
     "\n",
-    "# Welcome to cubes\n",
-    "print(\"Welcome to cubes\")\n",
-    "print(\"*\" * 17)\n",
+    "    # Get user input for cube calculation\n",
+    "    user = int(input(\"Enter your number: \"))\n",
     "\n",
-    "# Get user input for cube calculation\n",
-    "user = int(input(\"Enter your number: \"))\n",
+    "    # Calculate and print the cube of numbers in reverse order\n",
+    "    for i in range(user, 0, -1):\n",
+    "        a = i * i * i\n",
+    "        print(\"Cube of\", i, \"is\", a)\n",
     "\n",
-    "# Calculate and print the cube of numbers in reverse order\n",
-    "for i in range(user, 0, -1):\n",
-    "    a = i * i * i\n",
-    "    print(\"Cube of\", i, \"is\", a)\n"
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "import tkinter    \n",
+    "# Creating the main window using tkinter\n",
+    "window = tkinter.Tk()\n",
+    "\n",
+    "# Setting the window dimensions\n",
+    "window.geometry(\"500x500\")\n",
+    "\n",
+    "# Setting the window title\n",
+    "window.title(\"Python Project - Ganesh\")\n",
+    "\n",
+    "# Creating labels and buttons using tkinter\n",
+    "lab = tkinter.Label(window, text='PYTHON PROJECT', font=(\"Arabic\", 18))\n",
+    "lab.place(x=135, y=35)\n",
+    "\n",
+    "lab1 = tkinter.Label(window, text='Made by Ganesh', font=(\"Arabic\", 14))\n",
+    "lab1.place(x=185, y=70)\n",
+    "\n",
+    "key = tkinter.Button(window, text=\"Fibonacci\", height=3, width=18, command=Fibonacci)\n",
+    "key.place(x=190, y=120)\n",
+    "\n",
+    "key2 = tkinter.Button(window, text=\"Cube\", height=3, width=18, command=Cube)\n",
+    "key2.place(x=190, y=200)\n",
+    "\n",
+    "# Running the main loop of the tkinter window\n",
+    "window.mainloop()    \n",
+    "    \n",
+    "    \n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26a99398",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
